--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -28,10 +28,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
-# In this example config, we tell dbt to build all models in the example/ directory
-# as tables. These settings can be overridden in the individual model files
-# using the `{{ config(...) }}` macro.
 models:
   recipe:
-    # Config indicated by + and applies to all files under models/example/
-    +materialized: view
+    +staging: view
