--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,10 +24,11 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
 models:
-  recipe:
-    +staging: view
+  recipe: # project name
+    staging:
+      +materialized: view
+    intermediate:
+      +materialized: view
+    marts:
+      +materialized: table
