--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,4 +10,4 @@ jobs:
           python-version: '3.10'
           cache: pip
       - run: pip install -r requirements.txt
-      - run: make test
+      - run: make lint
